# COSC4353

./: README.md  main.py  pyproject.toml  test.py
Assignment1/: .coverage  test.txt
Assignment1/src/: gameoflife.py
Assignment1/test/: test_game_of_life.py
misc/: main.py
